Bug 412125 - Action files of local python scripts aren't loaded, meaning shortcuts aren't possible for local python plugins.
Summary: Action files of local python scripts aren't loaded, meaning shortcuts aren't ...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Scripting (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-20 15:23 UTC by wolthera
Modified: 2024-10-12 19:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2019-09-20 15:23:03 UTC
SUMMARY
Python plugins support assigning shortcuts to actions created with python. However, these only work when said plugin is bundled, and not when the plugin lives in the Krita Resource Folder of the user.


STEPS TO REPRODUCE
1. Load the python script from https://bugs.kde.org/show_bug.cgi?id=410272 into your local Krita resource directory.
2. Go to settings->configure Krita->shortcuts
3. Try to find 'Increase Brush Size By Custom Increments'

OBSERVED RESULT
'Increase Brush Size By Custom Increments' isn't there, despite the action file being set up.
Comment 1 Halla Rempt 2019-09-28 08:22:06 UTC
If the action files are placed in .local/share/actions, they will be found, but that's not very convenient...
Comment 2 Halla Rempt 2019-09-28 08:26:54 UTC
Git commit 58a73c43a8b4fbc7831a9f5c8ef61b17f00cfa20 by Boudewijn Rempt.
Committed on 28/09/2019 at 08:26.
Pushed by rempt into branch 'master'.

Also look for action files in the pykrita folder

This means action files that come with plugins are loaded as well.

M  +1    -0    libs/ui/KisApplication.cpp

https://invent.kde.org/kde/krita/commit/58a73c43a8b4fbc7831a9f5c8ef61b17f00cfa20
Comment 3 Halla Rempt 2019-10-04 08:01:27 UTC
Git commit 5cec76e3250dc6cb599f028198b06b6537ce420c by Boudewijn Rempt.
Committed on 04/10/2019 at 07:54.
Pushed by rempt into branch 'krita/4.2'.

Also look for action files in the pykrita folder

This means action files that come with plugins are loaded as well.

M  +1    -0    libs/ui/KisApplication.cpp

https://invent.kde.org/kde/krita/commit/5cec76e3250dc6cb599f028198b06b6537ce420c