Also look for action files in the pykrita folder

This means action files that come with plugins are loaded as well.

BUG:412125